--- a/wedding-website/index.html
+++ b/wedding-website/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/cat-icon.svg">
+    <link rel="alternate icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Joseph & Kaitlyn's Wedding</title>
+    <meta name="description" content="Join us for our wedding celebration on June 14, 2025 at Cafe Brauer in Chicago">
   </head>
   <body>
     <div id="app"></div>
