--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joseph & Kaitlyn's Wedding</title>
     <meta name="description" content="Join us for our wedding celebration on June 14, 2025 at Cafe Brauer in Chicago">
+    <!-- Preload critical hero image -->
+    <link rel="preload" as="image" href="/images/joe-and-kait/Kauffman-Pezzulla-E-0001.jpg">
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
